clusters/homelab/apps/llm/llama-stack/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: llamastack
  namespace: llm
spec:
  selector:
    matchLabels:
      app: llamastack
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-sdk: "false"
      labels:
        app: llamastack
    spec:
      volumes:
        - name: run-config-volume
          configMap:
            name: run-config
            defaultMode: 420
        - name: cache
          emptyDir: {}
        - name: pythain
          emptyDir: {}
      containers:
        - resources: {}
          name: llamastack
          ports:
            - containerPort: 8321
              protocol: TCP
          volumeMounts:
            - name: pythain
              mountPath: /pythainlp-data
            - name: run-config-volume
              mountPath: /usr/local/lib/python3.12/site-packages/llama_stack/distributions/starter/run.yaml
              subPath: config.yaml
            # - name: llama-persist
            #   mountPath: /.llama
            - name: cache
              mountPath: /.cache
          terminationMessagePolicy: File
          image: 'docker.io/llamastack/distribution-starter:0.6.0'
      securityContext: {}
